monticore-generator/src/test/resources/cocos/valid/Overriding.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.valid;

grammar Overriding extends mc.grammars.types.TestTypes {

  @Override
  abstract ArrayType;

  @Override
  QualifiedName;

  // Override mc.literals.Literals
      @Override
      interface Literal extends Expression;

      Expression;
      
      A extends Name;

}
